--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 *,
 ::before,
 ::after {
@@ -40,4 +42,10 @@ input {
 
 .icon {
   filter: var(--icon-color);
+}
+
+.container {
+  @include abstracts.screen(sm) {
+    --grid-gutter-x: 40px !important;
+  }
 }
