--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -31,4 +31,16 @@
 
   background: var(--like-btn-bg);
   box-shadow: 0 20px 60px var(--like-btn-shadow);
+
+  &:not(&--liked) .like-btn__icon--liked {
+    display: none;
+  }
+
+  &--liked .like-btn__icon {
+    display: none;
+  }
+
+  &__icon--liked {
+    margin-top: 6px;
+  }
 }
