--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -17,7 +17,7 @@
   }
 
   &__cate {
-    margin-top: 20px;
+    // margin-top: 20px;
     --grid-gutter-x: 51px;
 
     @include abstracts.screen(lg) {
